// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppContainer rendering renders correctly 1`] = `
<div
  className="app-container"
>
  <HeaderContainer />
  <Result />
  <div
    className="app-container-lower-panel"
  >
    <AppLabel />
  </div>
</div>
`;

exports[`AppContainer rendering renders correctly 2`] = `
<div
  className="app-container"
>
  <HeaderContainer
    productSelected={true}
  />
  <Result
    data={Array []}
    genre="genre"
    productSelected={true}
  />
  <div
    className="app-container-lower-panel"
  >
    <AppLabel />
  </div>
</div>
`;
